--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,11 @@
       <artifactId>junit-jupiter-engine</artifactId>
       <version>5.2.0</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>2.0.2-beta</version>
+    </dependency>
   </dependencies>
 
   <properties>
